app/assets/scss/style.scss
@import url("bootstrap.css");
@import url("lato.css");
@import url("../icomoon/style.css");

* {
  box-sizing: border-box;
}

*:focus {
  outline-color: #53777A !important;
}

::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 8px;
}

::-webkit-scrollbar-thumb {
  background: rgba(0,0,0,.3);
  border-radius: 2px;
}

::-webkit-scrollbar-thumb:hover {
  background: rgba(0,0,0,.4);
}

html {
  margin: 0;
  padding: 0;
}

input[type=checkbox] {
  -webkit-appearance: none;
  width: 18px;
  height: 18px;
  line-height: 1.7em;
  border: 2px solid #AAA;
  padding: 0;
  margin: 0 5px;
  position: relative;
}

input[type='text'] {
  border: 2px solid #AAA;
  border-radius: 0;
  padding: 3px 8px;
  box-sizing: content-box;
  &:focus {
    border: 2px solid #AAA;
  }
}

input[type=checkbox]:checked:after {
  font-family: Icomoon;
  content: '\e0f0';
  line-height: 1em;
  font-size: 10px;
  color: #aaa;
  position: absolute;
  top: 2px;
  left: 2px;
}

label {
  margin: 10px 0px;
}

.label-desc {
  line-height: 1.7em;
}

button {
  display: inline-block;
  color: #666;
  background: #AAA;
  padding: 8px 12px;
  border: none;
  &:hover {
    background: #CCC;
  }

  &:active {

    background: #8A9B0F;

  }
}

body {
  -webkit-user-select: none;
  background: #efefef;
  color: #666;
  cursor: default;
  font-family: LatoRegular;
  overflow: auto;
  margin: 0;
  padding: 0;
}

.wrapper {
  width: 902px;
  height: 552px;
  border: 1px solid #3e3e3e;
}

.sidebar {
  float: left;
  width: 210px;
  height: 550px;
  background: #3e3e3e;
  ul {
    overflow-x: hidden;
    overflow-y: auto;
    margin: 0;
    margin-top: 40px;
    padding: 0;
    height: 450px;
    list-style: none;
    li a {
      display: block;
      padding-left: 20px;
      padding-right: 20px;
      width: 210px;
      height: 40px;
      line-height: 40px;
      color: #a9a9a9;
      text-decoration: none;
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
      &:hover {
        color: #fff;
      }
      &:hover {
         color: #fff;
      }
      &.active {
        background: #302f2f;
        color: #fff;
      }
    }

  }

  .controls {
    margin: auto;
    text-align: center;
    border-top: 1px solid darken(#a9a9a9, 50%);
    width: 180px;
    padding-top: 12px;
    position: relative;
    .icons {
      height: 30px;
      width: 30px;
      line-height: 30px;
      color: #a9a9a9;
      display: inline-block;
      -webkit-transform: scale(0, 0);
      -webkit-transition: -webkit-transform .3s;
      &:hover {
        color: #fff;
      }
    }

    .new-project {
      -webkit-transform: scale(1, 1);
    }

    &.show .icons {
      -webkit-transform: scale(1, 1);
      -webkit-transition: -webkit-transform .2s;
    }
  }
}



.main {
  float: left;
  overflow: hidden;
  width: 690px;
  height: 550px;
  .title-bar {
    -webkit-app-region: drag;
    width: 690px;
    height: 40px;
    background: #fff;
    box-shadow: 1px 1px 2px #d3d3d3;
    .controls {
      float: right;
      a {
        display: block;
        float: left;
        margin-top: 5px;
        margin-right: 5px;
        height: 30px;
        width: 30px;
        color: #777;
        line-height: 30px;
        text-align: center;
        text-decoration: none;
        cursor: default;
        -webkit-app-region: no-drag;
        &:hover {
          color: rgba(250, 86, 33, 0.7);
          background: rgba(250, 86, 33, 0.2);
        }
        &:active {
          color: rgba(250, 86, 33, 1);
          background: rgba(250, 86, 33, 0.4);
        }
      }
    }
  }

  .project-options {
    font-family: LatoRegular;
    color: #666;
    position: absolute;
    z-index: 555;
    top: 50%;
    margin-top: -150px;
    left: 50%;
    margin-left: -125px;
    width: 250px;
    height: 300px;
    padding: 10px;
    background: #FFF;
    text-align: left;
    border: 2px solid #AAA;
    display: none;
    box-shadow: 0px 0px 0px 500px rgba(255, 255, 255, 0.2);
    * {
      max-width: 225px;
    }

    button {
      margin: 15px auto 0 auto;
      display: block;
    }
  }

  .content .content-wrap {
    position: relative;
    float: left;
    margin-top: 10px;
    margin-left: 10px;
    width: 680px;
    ul {
      display: block;
      float: left;
      overflow-x: hidden;
      overflow-y: auto;
      margin: 0;
      padding: 0;
      width: 670px;
      height: 490px;
      -webkit-transition: width 0.25s;
    }

    &.show-options ul {
      width: 450px;
      -webkit-transition: width 0.25s;
    }
    .home {
      h1 {
        text-align: center;
        font-size: 100px;
        margin-top: 130px;
      }
      p {
        text-align: center;
        font-size: 16px;
      }
    }

    .file {
      display: block;
      margin-bottom: 10px;
      padding-right: 2px; //Keep scrollbar away
      &:last-child {
        margin-bottom: 0;
      }
      a {
        display: block;
        padding: 10px;
        height: 90px;
        border: 1px solid #dbd7d7;
        background: #fff;
        list-style: none;
        cursor: default;
        overflow: hidden;
        &:hover {
          border: 1px solid #f1dbd2;
        }
        &.active {
          border: 1px solid rgba(250, 86, 33, 0.17);
          background: #faeee9;
        }
        .output:hover {
          text-decoration: underline;
          cursor: pointer;
        }
      }
      .thumb {
        position: relative;
        float: left;
        margin-top: 1px;
        width: 65px;
        height: 65px;
        background: #3e3e3e;
        color: #cfcfcf;
        text-align: center;
        line-height: 65px;
        &:after {
          position: absolute;
          top: 28px;
          right: 0;
          width: 0;
          height: 0;
          border-top: 6px solid transparent;
          border-bottom: 6px solid transparent;
          content: '';
        }
        &.no-compile {
          -webkit-filter: opacity(.7) sepia(1);
        }
      }
      .scss {
        border-right: 5px solid #c02ec9;;
        &:after {
          border-right: 5px solid #c02ec9;;
        }
      }
      .sass {
        border-right: 5px solid #966955;
        &:after {
          border-right: 5px solid #966955;
        }
      }
      .less {
        border-right: 5px solid #79C3D2;
        &:after {
          border-right: 5px solid #79C3D2;
        }
      }
      .stylus {
        border-right: 5px solid #45ADA8;
        &:after {
          border-right: 5px solid #45ADA8;
        }
      }
      .jade {
        border-right: 5px solid #F38630;
        &:after {
          border-right: 5px solid #F38630;
        }
      }
      .coffee {
        border-right: 5px solid #8A9B0F;
        &:after {
          border-right: 5px solid #8A9B0F;
        }
      }
      .haml {
        border-right: 5px solid #00A0B0;
        &:after {
          border-right: 5px solid #00A0B0;
        }
      }
      .md {
        border-right: 5px solid #D3CE3D;
        &:after {
          border-right: 5px solid #D3CE3D;
        }
      }
      .details {
        float: left;
        margin-left: 10px;
        span {
          display: block;
        }
        .name {
          color: #666;
          font-weight: bold;
        }
        .input, .output {
          color: #AAA;
        }
      }
    }

    .options {
      position: absolute;
      right: -220px;
      float: left;
      padding: 10px;
      width: 220px;
      height: 490px;
      border: 1px solid #dbd7d7;
      border-right: none;
      background: #fff;
      -webkit-transition: right 0.25s;
      overflow: hidden;
      visibility: hidden;

      * {
        max-width: 200px;
      }

      .file-type {
        display: block;
        font-size: 24px;
        margin: 5px 0 5px 0;
        padding-bottom: 5px;
        text-align: center;
      }

      .file-name {
        display: block;
        margin-bottom: 15px;
        padding-bottom: 5px;
        border-bottom: 1px solid #dbd7d7;
        text-align: center;
      }

      select {
        border: 2px solid #AAA;
        border-radius: 0;
      }

      .compile {
        position: absolute;
        bottom: 20px;
        left: 75px;
      }
    }

    &.show-options .options {
      right: 0px;
      visibility: visible;
      -webkit-transition: right 0.25s;
    }
  }
}

@-webkit-keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
  }
}

.loading-overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  .container {
    width: 60px;
    height: 60px;
    padding: 15px;
    border-radius: 10px;
    background: rgba(0, 0, 0, .4);
    position: relative;
    top: 235px;
    div {
      color: #fff;
      width: 30px;
      height: 30px;
      font-size: 30px;
    }
    .loading-icon {
      -webkit-animation: spin .6s infinite linear;
    }
  }
}


//Log styles

.preprosLog {

  margin: 0;
  padding: 0;

  h1 {
    margin: 10px;
    font-size: 20px;
    font-weight: normal;
    border-bottom: 1px solid #d3d3d3;
  }

  ul {
    margin-left: 10px;
    margin-right: 10px;
    padding-bottom: 0;
    margin-bottom: 0;
    width: 780px;
    height: 435px;
    overflow: scroll;
    li {
      padding: 15px;
      margin: 0 5px 10px 0;
      -webkit-user-select: text;
      &.error {
        background: rgba(red, .1);
        .name {
          color: rgba(red, .5);
          display: block;
          margin-bottom: 15px;
        }
      }
      &:last-child {
        margin: 0 5px 0 0;
        padding: 15px 15px ;
      }
    }
  }
}


//Options styles
.preprosOptions, .preprosAbout {
  padding: 15px;
  h4 {
    font-weight: normal;
    padding-bottom: 5px;
    border-bottom: 1px solid #d3d3d3;;
  }
}

//Notification window
.preprosNotification {
  background: #3e3e3e;
  color: #c9c9c9;
  width: 400px;
  height: 70px;
  padding: 10px;
  overflow: hidden;
  
  .icomoon-close {
    float: right;
    display: block;
    clear: both;
    margin-top: 19px;
    &:hover {
      color: #fff;
    }
  }

  .title {
    font-size: 25px;
    display: block;
    padding:10px;
    color: red;
    i {
      margin-right: 15px;
    }
  }
}

